crates/tmark-writers/tests/snapshots/fixtures__role-raw@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
A page break \clearpage here.

\vspace{1cm}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
