crates/tmark-writers/tests/snapshots/fixtures__span-anchor-deprecated@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><span id="myanchor"></span></p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
