crates/tmark-writers/tests/snapshots/fixtures__span-anchor-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#metadata(none) <myanchor>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
