crates/tmark-writers/tests/snapshots/fixtures__span@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>An anchor on <span id="claim:one">this claim</span>, a <span lang="en">quote with a <a href="x.md" class="document">link</a></span>, and [plain brackets].</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
