crates/tmark-writers/tests/snapshots/fixtures__span@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
An anchor on \phantomsection\label{claim:one}this claim, a \foreignlanguage{english}{quote with a link}, and [plain brackets].

---requires---
{
  "packages": [
    "babel"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
