crates/tmark-writers/tests/snapshots/fixtures__span@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
An anchor on this claim<claim:one>, a #text(lang: "en")[quote with a link], and \[plain brackets\].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
