crates/tmark-writers/tests/snapshots/fixtures__table-cell-linebreak@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 2,
  align: (left, left,),
  table.header([A], [B]),
  [a b], [c],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
